--- a/Data_with_Age_Education_IQ.ipynb
+++ b/Data_with_Age_Education_IQ.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 87,
    "id": "f0fff228-f011-4beb-abf1-29b43770cfa0",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 88,
    "id": "a4de218c-49e2-4eef-845c-cac9b6abd7e8",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 89,
    "id": "57f8c2f5-22fc-4c68-a10c-b071214644ea",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 90,
    "id": "11414c5e-3dc5-4ab1-a0ef-3458c5dc36da",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 91,
    "id": "8f03fd65-4e1f-477d-859a-28b090cfd071",
    "metadata": {},
    "outputs": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 92,
    "id": "f2fb9442-fc87-4121-8566-1ed9f9251f2d",
    "metadata": {},
    "outputs": [
@@ -92,14 +92,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 110,
    "id": "3698f301-820e-492f-83d8-98b76d8337c9",
    "metadata": {},
    "outputs": [],
    "source": [
     "total_data = []\n",
     "headers = data_parse.columns\n",
-    "eeg_cols = headers[8:122]\n",
+    "eeg_cols = headers[123:1149]\n",
     "age_col = headers[2]\n",
     "#sex_col = headers[2] \n",
     "edu_col = headers[4] \n",
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 112,
    "id": "3c4e35f4-0c7e-4854-8830-2c8fdc5d9a88",
    "metadata": {},
    "outputs": [
@@ -117,16 +117,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "118 [34.48, 10.0, 89.0, 8.806012, 8.728536, 8.184706, 9.487932, 7.914895, 12.346096, 8.346585, 5.157823, 8.185906, 10.845967, 11.330032, 5.64514, 3.878399, 11.896569, 8.345507, 8.142855, 4.741787, 4.15527, 4.936662, 7.762937, 8.410735, 6.556337, 9.342321, 9.068329, 12.318395, 7.662186, 4.311399, 7.186326, 14.645861, 11.251322, 5.175687, 3.547026, 7.536688, 8.177582, 7.73249, 4.231125, 3.16703, 3.846431, 53.223207, 52.382744, 32.195419, 50.865511, 54.564771, 63.329161, 36.330407, 16.547897, 32.787958, 64.207959, 55.455069, 19.903227, 17.038483, 21.36011, 41.971408, 46.844632, 20.755046, 16.090596, 21.721387, 14.406119, 14.820626, 10.685279, 16.058027, 14.656727, 18.259638, 14.184846, 8.194753, 15.843731, 19.458498, 20.012122, 10.44417, 6.939411, 13.774585, 18.527769, 18.643557, 8.984195, 7.613629, 8.816709, 1.864899, 1.984012, 1.687923, 2.154691, 1.808779, 2.211294, 1.850388, 1.399778, 2.109808, 2.303107, 2.038562, 1.470995, 1.464424, 1.533947, 1.613088, 1.590014, 1.232562, 1.14917, 1.274325, 1.083232, 1.150647, 1.021688, 1.076611, 0.954513, 1.055399, 1.031593, 0.983301, 1.425822, 1.060464, 1.016373, 0.945866, 0.89436, 0.891776, 0.868746, 0.892953, 0.797447, 0.752082, 0.867675, '1']\n",
+      "118 [32.87, 16.0, 108.0, 12.159137, 13.113503, 9.031007, 14.879389, 15.83483, 19.595759, 11.605911, 6.084709, 13.159062, 16.848773, 14.015103, 8.283439, 4.594446, 10.957161, 12.249199, 10.562645, 8.489141, 6.404962, 7.23517, 7.829772, 8.89498, 6.519044, 11.106882, 12.148242, 11.430233, 6.861712, 4.750089, 9.32456, 11.644291, 10.348482, 5.751727, 2.840736, 7.82947, 8.49089, 7.999637, 4.48155, 4.857487, 5.406491, 24.877439, 26.939986, 19.164824, 32.776782, 36.686694, 34.741534, 22.860706, 12.501867, 33.452792, 42.733322, 36.676051, 18.321642, 9.485397, 28.346261, 36.72406, 26.81463, 12.072228, 22.617391, 21.120044, 4.256582, 4.375999, 3.78038, 5.298075, 5.528563, 6.421384, 5.029728, 3.306942, 8.193191, 6.393206, 7.76091, 4.45914, 2.168419, 6.313913, 6.592705, 5.845611, 3.45431, 3.888247, 4.242814, 0.804693, 0.639437, 0.810462, 0.872661, 0.737553, 0.957681, 1.033361, 0.413274, 0.941063, 0.765235, 0.835256, 0.933639, 0.270185, 0.632236, 0.615763, 0.645, 0.502085, 0.427056, 0.489519, 0.872743, 0.739127, 0.898192, 0.78656, 0.768897, 1.077768, 1.691943, 0.919724, 0.851136, 0.786004, 1.008961, 1.710315, 0.424351, 0.767291, 0.65162, 0.695028, 0.599125, 0.505596, 0.581558, '1']\n",
       "118 ['age', 'education', 'IQ', 'AB.A.delta.a.FP1', 'AB.A.delta.b.FP2', 'AB.A.delta.c.F7', 'AB.A.delta.d.F3', 'AB.A.delta.e.Fz', 'AB.A.delta.f.F4', 'AB.A.delta.g.F8', 'AB.A.delta.h.T3', 'AB.A.delta.i.C3', 'AB.A.delta.j.Cz', 'AB.A.delta.k.C4', 'AB.A.delta.l.T4', 'AB.A.delta.m.T5', 'AB.A.delta.n.P3', 'AB.A.delta.o.Pz', 'AB.A.delta.p.P4', 'AB.A.delta.q.T6', 'AB.A.delta.r.O1', 'AB.A.delta.s.O2', 'AB.B.theta.a.FP1', 'AB.B.theta.b.FP2', 'AB.B.theta.c.F7', 'AB.B.theta.d.F3', 'AB.B.theta.e.Fz', 'AB.B.theta.f.F4', 'AB.B.theta.g.F8', 'AB.B.theta.h.T3', 'AB.B.theta.i.C3', 'AB.B.theta.j.Cz', 'AB.B.theta.k.C4', 'AB.B.theta.l.T4', 'AB.B.theta.m.T5', 'AB.B.theta.n.P3', 'AB.B.theta.o.Pz', 'AB.B.theta.p.P4', 'AB.B.theta.q.T6', 'AB.B.theta.r.O1', 'AB.B.theta.s.O2', 'AB.C.alpha.a.FP1', 'AB.C.alpha.b.FP2', 'AB.C.alpha.c.F7', 'AB.C.alpha.d.F3', 'AB.C.alpha.e.Fz', 'AB.C.alpha.f.F4', 'AB.C.alpha.g.F8', 'AB.C.alpha.h.T3', 'AB.C.alpha.i.C3', 'AB.C.alpha.j.Cz', 'AB.C.alpha.k.C4', 'AB.C.alpha.l.T4', 'AB.C.alpha.m.T5', 'AB.C.alpha.n.P3', 'AB.C.alpha.o.Pz', 'AB.C.alpha.p.P4', 'AB.C.alpha.q.T6', 'AB.C.alpha.r.O1', 'AB.C.alpha.s.O2', 'AB.D.beta.a.FP1', 'AB.D.beta.b.FP2', 'AB.D.beta.c.F7', 'AB.D.beta.d.F3', 'AB.D.beta.e.Fz', 'AB.D.beta.f.F4', 'AB.D.beta.g.F8', 'AB.D.beta.h.T3', 'AB.D.beta.i.C3', 'AB.D.beta.j.Cz', 'AB.D.beta.k.C4', 'AB.D.beta.l.T4', 'AB.D.beta.m.T5', 'AB.D.beta.n.P3', 'AB.D.beta.o.Pz', 'AB.D.beta.p.P4', 'AB.D.beta.q.T6', 'AB.D.beta.r.O1', 'AB.D.beta.s.O2', 'AB.E.highbeta.a.FP1', 'AB.E.highbeta.b.FP2', 'AB.E.highbeta.c.F7', 'AB.E.highbeta.d.F3', 'AB.E.highbeta.e.Fz', 'AB.E.highbeta.f.F4', 'AB.E.highbeta.g.F8', 'AB.E.highbeta.h.T3', 'AB.E.highbeta.i.C3', 'AB.E.highbeta.j.Cz', 'AB.E.highbeta.k.C4', 'AB.E.highbeta.l.T4', 'AB.E.highbeta.m.T5', 'AB.E.highbeta.n.P3', 'AB.E.highbeta.o.Pz', 'AB.E.highbeta.p.P4', 'AB.E.highbeta.q.T6', 'AB.E.highbeta.r.O1', 'AB.E.highbeta.s.O2', 'AB.F.gamma.a.FP1', 'AB.F.gamma.b.FP2', 'AB.F.gamma.c.F7', 'AB.F.gamma.d.F3', 'AB.F.gamma.e.Fz', 'AB.F.gamma.f.F4', 'AB.F.gamma.g.F8', 'AB.F.gamma.h.T3', 'AB.F.gamma.i.C3', 'AB.F.gamma.j.Cz', 'AB.F.gamma.k.C4', 'AB.F.gamma.l.T4', 'AB.F.gamma.m.T5', 'AB.F.gamma.n.P3', 'AB.F.gamma.o.Pz', 'AB.F.gamma.p.P4', 'AB.F.gamma.q.T6', 'AB.F.gamma.r.O1', 'AB.F.gamma.s.O2', 'Class']\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "118 columns passed, passed data had 1030 columns",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAssertionError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/miniforge3/lib/python3.13/site-packages/pandas/core/internals/construction.py:939\u001b[39m, in \u001b[36m_finalize_columns_and_data\u001b[39m\u001b[34m(content, columns, dtype)\u001b[39m\n\u001b[32m    938\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m939\u001b[39m     columns = \u001b[43m_validate_or_indexify_columns\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcontents\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    940\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mAssertionError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[32m    941\u001b[39m     \u001b[38;5;66;03m# GH#26429 do not raise user-facing AssertionError\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/miniforge3/lib/python3.13/site-packages/pandas/core/internals/construction.py:986\u001b[39m, in \u001b[36m_validate_or_indexify_columns\u001b[39m\u001b[34m(content, columns)\u001b[39m\n\u001b[32m    984\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m is_mi_list \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(columns) != \u001b[38;5;28mlen\u001b[39m(content):  \u001b[38;5;66;03m# pragma: no cover\u001b[39;00m\n\u001b[32m    985\u001b[39m     \u001b[38;5;66;03m# caller's responsibility to check for this...\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m986\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAssertionError\u001b[39;00m(\n\u001b[32m    987\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(columns)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m columns passed, passed data had \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    988\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(content)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m columns\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    989\u001b[39m     )\n\u001b[32m    990\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_mi_list:\n\u001b[32m    991\u001b[39m     \u001b[38;5;66;03m# check if nested list column, length of each sub-list should be equal\u001b[39;00m\n",
+      "\u001b[31mAssertionError\u001b[39m: 118 columns passed, passed data had 1030 columns",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[112]\u001b[39m\u001b[32m, line 19\u001b[39m\n\u001b[32m     17\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mlen\u001b[39m(final_columns), final_columns)\n\u001b[32m     18\u001b[39m \u001b[38;5;66;03m# Build the DataFrame\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m19\u001b[39m df = \u001b[43mpd\u001b[49m\u001b[43m.\u001b[49m\u001b[43mDataFrame\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtotal_data\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m=\u001b[49m\u001b[43mfinal_columns\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     20\u001b[39m iq_col = final_columns[\u001b[32m2\u001b[39m]\n\u001b[32m     21\u001b[39m edu_col = final_columns[\u001b[32m1\u001b[39m]\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/miniforge3/lib/python3.13/site-packages/pandas/core/frame.py:851\u001b[39m, in \u001b[36mDataFrame.__init__\u001b[39m\u001b[34m(self, data, index, columns, dtype, copy)\u001b[39m\n\u001b[32m    849\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m columns \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m    850\u001b[39m         columns = ensure_index(columns)\n\u001b[32m--> \u001b[39m\u001b[32m851\u001b[39m     arrays, columns, index = \u001b[43mnested_data_to_arrays\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    852\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;66;43;03m# error: Argument 3 to \"nested_data_to_arrays\" has incompatible\u001b[39;49;00m\n\u001b[32m    853\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;66;43;03m# type \"Optional[Collection[Any]]\"; expected \"Optional[Index]\"\u001b[39;49;00m\n\u001b[32m    854\u001b[39m \u001b[43m        \u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    855\u001b[39m \u001b[43m        \u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    856\u001b[39m \u001b[43m        \u001b[49m\u001b[43mindex\u001b[49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# type: ignore[arg-type]\u001b[39;49;00m\n\u001b[32m    857\u001b[39m \u001b[43m        \u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    858\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    859\u001b[39m     mgr = arrays_to_mgr(\n\u001b[32m    860\u001b[39m         arrays,\n\u001b[32m    861\u001b[39m         columns,\n\u001b[32m   (...)\u001b[39m\u001b[32m    864\u001b[39m         typ=manager,\n\u001b[32m    865\u001b[39m     )\n\u001b[32m    866\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/miniforge3/lib/python3.13/site-packages/pandas/core/internals/construction.py:520\u001b[39m, in \u001b[36mnested_data_to_arrays\u001b[39m\u001b[34m(data, columns, index, dtype)\u001b[39m\n\u001b[32m    517\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_named_tuple(data[\u001b[32m0\u001b[39m]) \u001b[38;5;129;01mand\u001b[39;00m columns \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m    518\u001b[39m     columns = ensure_index(data[\u001b[32m0\u001b[39m]._fields)\n\u001b[32m--> \u001b[39m\u001b[32m520\u001b[39m arrays, columns = \u001b[43mto_arrays\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    521\u001b[39m columns = ensure_index(columns)\n\u001b[32m    523\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m index \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/miniforge3/lib/python3.13/site-packages/pandas/core/internals/construction.py:845\u001b[39m, in \u001b[36mto_arrays\u001b[39m\u001b[34m(data, columns, dtype)\u001b[39m\n\u001b[32m    842\u001b[39m     data = [\u001b[38;5;28mtuple\u001b[39m(x) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m data]\n\u001b[32m    843\u001b[39m     arr = _list_to_arrays(data)\n\u001b[32m--> \u001b[39m\u001b[32m845\u001b[39m content, columns = \u001b[43m_finalize_columns_and_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43marr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    846\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m content, columns\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/miniforge3/lib/python3.13/site-packages/pandas/core/internals/construction.py:942\u001b[39m, in \u001b[36m_finalize_columns_and_data\u001b[39m\u001b[34m(content, columns, dtype)\u001b[39m\n\u001b[32m    939\u001b[39m     columns = _validate_or_indexify_columns(contents, columns)\n\u001b[32m    940\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mAssertionError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[32m    941\u001b[39m     \u001b[38;5;66;03m# GH#26429 do not raise user-facing AssertionError\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m942\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(err) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01merr\u001b[39;00m\n\u001b[32m    944\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(contents) \u001b[38;5;129;01mand\u001b[39;00m contents[\u001b[32m0\u001b[39m].dtype == np.object_:\n\u001b[32m    945\u001b[39m     contents = convert_object_array(contents, dtype=dtype)\n",
+      "\u001b[31mValueError\u001b[39m: 118 columns passed, passed data had 1030 columns"
      ]
     }
    ],
    "source": [
     "for i in range(0, 945):\n",
-    "    if arr[i, 6] == str(\"Anxiety disorder\") and arr[i, 5] != \"NA\" and arr[i, 4] != \"NA\":\n",
+    "    if arr[i, 6] == str(\"Addictive disorder\") and arr[i, 5] != \"NA\" and arr[i, 4] != \"NA\":\n",
     "        row = [arr[i, 2], arr[i, 4], arr[i, 5]]  \n",
-    "        for mood in range(8, 122):\n",
+    "        for mood in range(123, 1149):\n",
     "            row.append(arr[i, mood])\n",
     "        row.append(\"1\")\n",
     "        total_data.append(row)\n",
@@ -134,7 +154,7 @@
     "for i in range(0, 945):\n",
     "    if arr[i, 6] == str(\"Healthy control\") and arr[i, 5] != \"NA\" and arr[i, 4] != \"NA\":\n",
     "        row = [arr[i, 2], arr[i, 4], arr[i, 5]]  \n",
-    "        for hc in range(8, 122):\n",
+    "        for hc in range(123, 1149):\n",
     "            row.append(arr[i, hc])\n",
     "        row.append(\"0\")\n",
     "        total_data.append(row)\n",
@@ -157,7 +177,7 @@
     "#np.save(\"/home/novo/icr-2025-psych/AEIaddictivehc_allPSD.npy\")\n",
     "\n",
     "# Save to CSV\n",
-    "df.to_csv(\"/home/novo/icr-2025-psych/AEIanxietyhc_allPSD.csv\", index=False)"
+    "df.to_csv(\"/home/novo/icr-2025-psych/AEIaddictivehc_allFC.csv\", index=False)"
    ]
   },
   {
