--- a/Data_with_Age_Education_IQ.ipynb
+++ b/Data_with_Age_Education_IQ.ipynb
@@ -124,7 +124,7 @@
    "source": [
     "total_data = []\n",
     "for i in range(0, 945):\n",
-    "    if arr[i, 6] == str(\"Addictive disorder\") and arr[i, 5] != \"NA\" and arr[i, 4] != \"NA\":\n",
+    "    if arr[i, 6] == str(\" disorder\") and arr[i, 5] != \"NA\" and arr[i, 4] != \"NA\":\n",
     "        row = [arr[i, 2], arr[i, 4], arr[i, 5]]  \n",
     "        for mood in range(8, 1149):\n",
     "            row.append(arr[i, mood])\n",
