--- a/Notebooks/DiseasevsDisease.ipynb
+++ b/Notebooks/DiseasevsDisease.ipynb
@@ -1,19 +1,23 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "85745925-d79d-443f-8b9d-d4466c0a75de",
-   "metadata": {},
-   "source": [
-    "## Import Modules"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "88e41c8a-7da7-4a95-b94b-f8e10805d298",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'sklearn.impute'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mimpute\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m SimpleImputer\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpreprocessing\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m StandardScaler\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mfeature_selection\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m VarianceThreshold\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'sklearn.impute'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -33,16 +37,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "8b5743ad-a280-47c5-a822-998d4d434f4e",
-   "metadata": {},
-   "source": [
-    "## Load in file"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "be6bc071-a1fc-47f6-bbf6-c55c0d236245",
    "metadata": {},
    "outputs": [],
@@ -51,20 +47,25 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "12d022a0-3a86-48b3-b85a-d1d4f651da45",
-   "metadata": {},
-   "source": [
-    "## Specify disorders and classifiers"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "8b2b730f-0372-4565-ab7f-6a4891a58213",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      2\u001b[39m disorder1 = \u001b[33m'\u001b[39m\u001b[33mAddictive disorder\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m      3\u001b[39m disorder2 = \u001b[33m'\u001b[39m\u001b[33mObsessive compulsive disorder\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m filtered = \u001b[43mdf\u001b[49m[df[\u001b[33m'\u001b[39m\u001b[33mmain.disorder\u001b[39m\u001b[33m'\u001b[39m].isin([disorder1, disorder2])]\n\u001b[32m      6\u001b[39m bands = [\u001b[33m'\u001b[39m\u001b[33mdelta\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mtheta\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33malpha\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mbeta\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mhighbeta\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mgamma\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m      7\u001b[39m datatypes = [\u001b[33m'\u001b[39m\u001b[33mAB\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mCOH\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mAB+COH\u001b[39m\u001b[33m'\u001b[39m]\n",
+      "\u001b[31mNameError\u001b[39m: name 'df' is not defined"
+     ]
+    }
+   ],
    "source": [
+    "# Manually change these\n",
     "disorder1 = 'Addictive disorder'\n",
     "disorder2 = 'Obsessive compulsive disorder'\n",
     "filtered = df[df['main.disorder'].isin([disorder1, disorder2])]\n",
